feat: new translations added for users

--- a/resources/js/Locales/en.json
+++ b/resources/js/Locales/en.json
@@ -12,21 +12,46 @@
         "COP": "Colombian Peso",
         "USD": "US Dollar"
     },
-    "dashboard": "Dashboard",
-    "detail_microsite": "Microsite Details",
+    "dashboard": "Panel",
+    "detail_microsite": "Microsite Detail",
     "documentType": {
-        "CC": "Citizen ID",
-        "CE": "Foreigner ID",
+        "CC": "Citizenship Card",
+        "CE": "Foreigner's Card",
         "NIT": "Tax Identification Number",
         "PAS": "Passport",
         "RC": "Civil Registry",
-        "TI": "Identity Card"
+        "TI": "Identity card"
     },
     "errors": {
-        "internal_server_error": "Internal Server Error",
-        "page_not_found": "Page Not Found",
-        "unauthorized": "Unauthorized"
+        "internal_server_error": "Internal server error",
+        "page_not_found": "Page not found",
+        "unauthorized": "Not authorized"
     },
+    "form": {
+        "label": "Form",
+        "select_header": "Select a header",
+        "electronic_payments" : "Electronic payments",
+        "additional_information" : "Additional information",
+        "name": "First name",
+        "surname": "Last name",
+        "email": "Email",
+        "document": "Document",
+        "document_type": "Document type",
+        "mobile": "Phone or Cellular",
+        "reference": "Reference",
+        "description": "Description",
+        "currency_type": "Currency type",
+        "amount": "Amount",
+        "company": "Company",
+        "start_payment": "Start payment",
+        "select_footer": "Select a footer",
+        "fields": "Fields",
+        "periodicity": "Periodicity",
+        "interval": "Interval",
+        "maxPeriods": "Periods",
+        "notificationUrl": "Notification Url"
+    },
+
     "forgot_your_password": "Forgot your password?",
     "home": "Home",
     "language": {
@@ -34,7 +59,7 @@
         "en": "English",
         "es": "Spanish"
     },
-    "list_microsites": "Microsite List",
+    "list_microsites": "List of Microsites",
     "login": "Login",
     "logout": "Logout",
     "micrositeTypes": {
@@ -47,23 +72,23 @@
         "actions": "Actions",
         "administrator": "Administrator",
         "category": "Category",
-        "category_description": "Category Description",
-        "date": "Enable Date:",
-        "date_qualification": "Enable Date",
-        "document": "Document Number",
-        "document_type": "Document Type",
+        "category_description": "Category description",
+        "date": "Enable date:",
+        "date_qualification": "Enable date",
+        "document": "Document number",
+        "document_type": "Document type",
         "logo": "Logo",
-        "microsite_type": "Microsite Type",
+        "microsite_type": "Microsite type",
         "name": "Name",
         "slug": "URL",
-        "time_expiration": "Expiration Time in Seconds",
+        "time_expiration": "Expiration time in seconds",
         "type": "Type"
     },
     "page": "Pages",
-    "payment_expiration_time": "Expiration Time in Seconds",
+    "payment_expiration_time": "Expiration time in seconds",
     "return": "Return",
     "register": "Register",
-    "remember_me": "Remember Me",
+    "remember_me": "Remember me",
     "resource": {
         "create": "Create",
         "destroy": "Delete",
@@ -84,78 +109,58 @@
     "searchMicrosite": "Search microsite",
     "updateMicrosite": "Update microsite",
     "select": "Select",
-    "titleWelcome": "Discover hundreds of businesses and make all your payments in one place, easily and quickly",
+    "titleWelcome": "Discover hundreds of merchants and make all your payments in one place, quickly and easily",
     "user": {
         "label": "Users",
         "actions": "Actions",
         "already_registered": "Already registered?",
-        "confirm_password": "Confirm Password",
+        "confirm_password": "Confirm password",
         "cancel": "Cancel",
         "email": "Email",
         "name": "Name",
         "password": "Password",
-        "profile": "My Profile",
-        "profile_information": "Profile Information",
-        "profile_information_additional": "Update your profile information and account email address.",
+        "profile": "My profile",
+        "profile_information": "Profile information",
+        "profile_information_additional": "Update your account's profile information and email address.",
         "settings": "Settings",
-        "update_password": "Update Password",
-        "update_password_additional": "Make sure your account uses a long, random password to keep it secure.",
-        "current_password": "Current Password",
-        "new_password": "New Password",
-        "delete_account": "Delete Account",
-        "delete_account_additional": "Once your account is deleted, all your resources and data will be permanently erased. Before deleting your account, download any data or information you want to keep.",
+        "update_password": "Update password",
+        "update_password_additional": "Make sure your account uses a long, random password to maintain security.",
+        "current_password": "Current password",
+        "new_password": "New password",
+        "delete_account": "Delete account",
+        "delete_account_additional": "After your account is deleted, all of your resources and data will be permanently deleted. Before you delete your account, please download any data or information that you want to keep.",
         "are_you_sure_delete": "Are you sure you want to delete your account?",
-        "are_you_sure_delete_additional": "Once your account is deleted, all your resources and data will be permanently erased. Enter your password to confirm that you want to permanently delete your account."
+        "are_you_sure_delete_additional": "After your account is deleted, all of your resources and data will be permanently deleted. Enter your password to confirm that you want to permanently delete your account.",
+        "update_user": "Update user",
+        "list_users": "List of users",
+        "roles": "Roles",
+        "create_user": "Create user"
     },
     "welcome": "Welcome",
-    "welcome_title": "Welcome to microsites ",
-    "form": {
-        "label": "Form",
-        "select_header": "Select a Header",
-        "electronic_payments": "Electronic Payments",
-        "additional_information": "Additional Information",
-        "name": "Name",
-        "surname": "Surname",
-        "email": "Email",
-        "document": "Document",
-        "document_type": "Document Type",
-        "mobile": "Phone or Mobile",
-        "reference": "Reference",
-        "description": "Description",
-        "currency_type": "Currency Type",
-        "amount": "Amount",
-        "company": "Company",
-        "start_payment": "Start Payment",
-        "select_footer": "Select a Footer",
-        "fields": "Fields",
-        "periodicity": "Periodicity",
-        "interval": "Interval",
-        "maxPeriods": "Periods",
-        "notificationUrl": "Notification URL"
-    },
-    "of": "Of",
+    "welcome_title": "Welcome to microsites",
+    "of": "de",
     "enter": "Enter",
     "payment": {
         "payments_title": "Payments",
         "reference": "Reference",
         "receipt": "Receipt",
-        "payer_name": "First Name",
-        "payer_surname": "Last Name",
-        "payer_email": "Email",
-        "payer_phone": "Phone or Mobile",
-        "payer_company": "Company",
-        "payer_document_type": "Document Type",
-        "payer_document": "Document",
-        "description": "Description",
-        "amount": "Amount",
-        "currency": "Currency",
-        "status": "Status",
-        "process_identifier": "Process Identifier",
-        "additional_data": "Pay securely from anywhere, anytime, thanks to our 24/7 payment system.",
+        "payer_name": "First name",
+        "payer_surname":"Last name",
+        "payer_email":"Email",
+        "payer_phone":"Phone or Mobile",
+        "payer_company":"Company",
+        "payer_document_type":"Document Type",
+        "payer_document":"Document",
+        "description":"Description",
+        "amount":"Amount",
+        "currency":"Currency",
+        "status":"Status",
+        "process_identifier":"Process Identifier",
+        "additional_data":"Pay safely from anywhere, at any time, thanks to our 24/7 payment system.",
         "microsite_name": "Microsite",
-        "payment_list": "Payment List",
+        "payment_list" : "Payment List",
         "payment_detailer": "Payment Detail",
-        "paid_at": "Paid At"
+        "paid_at" : "Paid at"
     },
     "payment_status": {
         "PENDING" : "Pending",
@@ -163,6 +168,6 @@
         "REJECTED" : "Rejected",
         "APPROVED_PARTIAL" : "Partially Approved",
         "PARTIAL_EXPIRED" : "Partially Expired",
-        "UNKNOWN" :"Unknown"
+        "UNKNOWN" : "Unknown"
     }
 }
