feat: add new traslations

--- a/resources/js/Locales/en.json
+++ b/resources/js/Locales/en.json
@@ -10,7 +10,8 @@
     "currency": "Currency",
     "currencies": {
         "COP": "Colombian Peso",
-        "USD": "US Dollar"
+        "USD": "US Dollar",
+        "BOTH": "Both"
     },
     "dashboard": "Panel",
     "detail_microsite": "Microsite Detail",
