refactor: update role with capitalize label

--- a/resources/js/Locales/en.json
+++ b/resources/js/Locales/en.json
@@ -13,7 +13,7 @@
         "USD": "US Dollar",
         "BOTH": "Both"
     },
-    "dashboard": "Panel",
+    "dashboard": "Dashboard",
     "detail_microsite": "Microsite Detail",
     "documentType": {
         "CC": "Citizenship Card",
