feat: add new translations

--- a/resources/js/Locales/en.json
+++ b/resources/js/Locales/en.json
@@ -50,7 +50,19 @@
         "periodicity": "Periodicity",
         "interval": "Interval",
         "maxPeriods": "Periods",
-        "notificationUrl": "Notification Url"
+        "notificationUrl": "Notification Url",
+        "button_color": "Button Color",
+        "yellow": "Yellow",
+        "orange": "Orange",
+        "green": "Green",
+        "lime": "Lime",
+        "fuchsia": "Fuchsia",
+        "pink": "Pink",
+        "blue": "Blue",
+        "red": "Red",
+        "violet": "Violet",
+        "cyan": "Cyan",
+        "gray": "Gray"
     },
 
     "forgot_your_password": "Forgot your password?",
