feat: news translate subscriptions

--- a/resources/js/Locales/en.json
+++ b/resources/js/Locales/en.json
@@ -289,6 +289,7 @@
         "state": "State"
     },
     "subscription": {
+        "subscriptions" : "Subscriptions",
         "label" : "Subscription plans",
         "name": "Name",
         "amount": "Amount",
