--- a/resources/js/Locales/es.json
+++ b/resources/js/Locales/es.json
@@ -289,6 +289,7 @@
         "state": "Estado"
     },
     "subscription": {
+        "subscriptions" : "Suscripciones",
         "label" : "Planes de suscripción",
         "name" : "Nombre",
         "amount":  "Monto",
